# Custom-GPT-MCP

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: tools.yaml
data/corpus/: README.txt
data/corpus/samples/: article_1.txt  filing_1.txt  news_1.txt
data/portfolios/: sample_portfolio.csv
data/tables/: xmetric_table.csv  ymetric_table.parquet
eval/: canned_prompts.jsonl  run_eval.py  validate.py
gpt/: config.json  few_shots.md  routing_notes.md  starters.md  system_prompt.md
schemas/: charts.v1.json  portfolio.v1.json  xmetric.v1.json  ymetric.v1.json
tools/: common.py  mcp.manifest.json  portfolio_server.py  server_main.py  xmetric_server.py  ymetric_server.py
