[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-gpt-mcp"
version = "0.1.0"
description = "Custom GPT prototype with MCP tools and file search"
authors = [{name = "OpenAI Codex"}]
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "pyarrow",
    "openpyxl",
    "pydantic>=1.10,<3",
    "jsonschema>=4.18",
    "typer[all]",
    "rich",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy"
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

